[gd_scene load_steps=5 format=3 uid="uid://jci0jbslk6hj"]

[ext_resource type="Script" path="res://Objects/Scripts/Enemy.gd" id="1_irflq"]
[ext_resource type="Texture2D" uid="uid://csnjvdqwhfwhj" path="res://Assets/Close.png" id="2_jcpcc"]
[ext_resource type="PackedScene" uid="uid://bya0ps2ufov22" path="res://Objects/Components/AbilityComponent.tscn" id="2_ti8ex"]
[ext_resource type="PackedScene" uid="uid://2sabk1qf7cl4" path="res://Objects/Components/StatComponent.tscn" id="3_u7d70"]

[node name="Enemy" type="Node2D"]
texture_filter = 1
script = ExtResource("1_irflq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_jcpcc")

[node name="Button" type="Button" parent="Sprite2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true

[node name="AbilityComponent" parent="." node_paths=PackedStringArray("stats", "parent") instance=ExtResource("2_ti8ex")]
stats = NodePath("../StatComponent")
parent = NodePath("..")

[node name="StatComponent" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("3_u7d70")]
parent = NodePath("..")

[connection signal="pressed" from="Sprite2D/Button" to="." method="_on_button_pressed"]
